--- a/GenericsSample/GenericsSample.csproj
+++ b/GenericsSample/GenericsSample.csproj
@@ -43,6 +43,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sample1.cs" />
+    <Compile Include="Sample2.cs" />
+    <Compile Include="Sample3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
